--- a/DAY9/style.css
+++ b/DAY9/style.css
@@ -1,6 +1,6 @@
 /* nav-bar */
 .nav-bar{
-    background-color: rgb(222, 222, 222);
+    background-color: rgb(255, 255, 255);
     margin: 0px;
     padding: 0px;
     display: flex;
@@ -28,4 +28,52 @@
 }
 .nav-bar ul li a:hover{
     color: rgb(92, 92, 92);
+}
+/* header */
+.header .banner{
+    position: relative;
+}
+.header .banner img{
+    width: 100%;
+    height: 350px;
+    opacity: 0.7;
+}
+.header h2{
+    font-weight: 100;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    position: absolute;
+    top: 70px;
+    left: 30px;
+}
+.header .banner h1{
+    font-weight: 1000 bolder;
+    position: absolute;
+    top: 100px;
+    left: 30px;
+}
+.header .banner h4{
+    font-weight:lighter;
+    position: absolute;
+    top: 140px;
+    left: 30px;
+    color: rgb(40, 58, 0);
+    font-family:monospace;
+}
+.header .banner h3{
+    font-weight:lighter;
+    position: absolute;
+    top: 180px;
+    left: 30px;
+    color: rgb(255, 255, 255);
+    font-family:'Times New Roman', Times, serif;
+    background-color: rgb(0, 0, 0);
+    padding: 10px;
+}
+.header .banner a{
+    font-weight:lighter;
+    position: absolute;
+    top: 210px;
+    left: 180px;
+    color: rgb(255, 237, 103);
+    font-family:'Times New Roman', Times, serif;
 }
